--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -49,11 +49,11 @@ http {
         }
 
         error_page 404 /404.html;
-            location = /40x.html {
+        location = /40x.html {
         }
 
         error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
+        location = /50x.html {
         }
 
         location ~ \.php$ {
@@ -73,7 +73,23 @@ http {
                   proxy_set_header X-Forwarded-For $remote_addr;
                   proxy_pass https://blog.csdn.net/angcyo;
          }
-}
+    }
+
+    server {
+         listen       80;
+         server_name  blog2.angcyo.com;
+         location / {
+                  rewrite   https://blog.csdn.net/angcyo;
+         }
+    }
+
+    server {
+         listen       80;
+         server_name  blog3.angcyo.com;
+         location / {
+              proxy_pass    https://blog.csdn.net/angcyo;
+         }
+    }
 
 # Settings for a TLS enabled server.
 #
