--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -79,7 +79,7 @@ http {
          listen       80;
          server_name  blog2.angcyo.com;
          location / {
-                  rewrite   https://blog.csdn.net/angcyo;
+                  rewrite  "/"  https://blog.csdn.net/angcyo break;
          }
     }
 
