--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -91,6 +91,14 @@ http {
          }
     }
 
+    server {
+         listen       80;
+         server_name  github.angcyo.com g.angcyo.com gh.angcyo.com;
+         location / {
+               return 301 https://github.com/angcyo/;
+         }
+    }
+
 # Settings for a TLS enabled server.
 #
 #    server {
