--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -68,6 +68,14 @@ http {
          listen       80;
          server_name  blog.angcyo.com;
          location / {
+                return 301 https://blog.csdn.net/angcyo;
+         }
+    }
+    
+    server {
+         listen       80;
+         server_name  blog1.angcyo.com;
+         location / {
                   proxy_set_header Host $host;
                   proxy_set_header X-Real-Ip $remote_addr;
                   proxy_set_header X-Forwarded-For $remote_addr;
