--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -72,32 +72,32 @@ http {
          }
     }
 
-    server {
-         listen       80;
-         server_name  blog1.angcyo.com;
-         location / {
-                  proxy_set_header Host $host;
-                  proxy_set_header X-Real-Ip $remote_addr;
-                  proxy_set_header X-Forwarded-For $remote_addr;
-                  proxy_pass https://blog.csdn.net/angcyo;
-         }
-    }
-
-    server {
-         listen       80;
-         server_name  blog2.angcyo.com;
-         location / {
-                  rewrite  "/"  https://blog.csdn.net/angcyo break;
-         }
-    }
-
-    server {
-         listen       80;
-         server_name  blog3.angcyo.com;
-         location / {
-              proxy_pass    https://blog.csdn.net/angcyo;
-         }
-    }
+#    server {
+#         listen       80;
+#         server_name  blog1.angcyo.com;
+#         location / {
+#                  proxy_set_header Host $host;
+#                  proxy_set_header X-Real-Ip $remote_addr;
+#                  proxy_set_header X-Forwarded-For $remote_addr;
+#                  proxy_pass https://blog.csdn.net/angcyo;
+#         }
+#    }
+#
+#    server {
+#         listen       80;
+#         server_name  blog2.angcyo.com;
+#         location / {
+#                  rewrite  "/"  https://blog.csdn.net/angcyo break;
+#         }
+#    }
+#
+#    server {
+#         listen       80;
+#         server_name  blog3.angcyo.com;
+#         location / {
+#              proxy_pass    https://blog.csdn.net/angcyo;
+#         }
+#    }
 
     server {
          listen       80;
