--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,21 @@
-*.iml
-*.apk
-/.svn
-/.git
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-build
-/build
-*/build
-/captures
-.externalNativeBuild
-/.idea/
-/gradle/wrapper/gradle-wrapper.properties
-gradle/
-gradlew
-gradlew.bat
-/RLibrary2
-/RLibrary
-/apk
-*.log
-/RTbs
-/RJpush
-/RJoup
-/RJsoup
-/RRealm
-/RHyphenate
-/RBmob
+node_modules
+/dist
 
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
